# datafolio

./: .copier-answers.yml  404.html  ARCHITECTURE.md  CACHING_DESIGN.md  CLAUDE.md  PARQUET_TABLES.md  PROJECT_SUMMARY.md  README.md  REFACTOR_PLAN.md  SNAPSHOTS.md  SNAPSHOTS_PHASE_7.md  coverage.json  index.html  mkdocs.yml  notebook_cells.py  objects.inv  pyproject.toml  scratch.ipynb  sitemap.xml
.github/workflows/: mkdocs_publish.yml  python-package.yml
changelog/: index.html
docs/: changelog.md  index.md
docs/guides/: advanced-tables.md  caching.md  getting-started.md  index.md  models.md  parquet-optimization.md  snapshots.md
docs/reference/: api.md  cli.md  datafolio-api.md
examples/: handler_demo.py  type_detection_demo.py
guides/: index.html
guides/caching/: index.html
guides/getting-started/: index.html
guides/models/: index.html
guides/parquet-optimization/: index.html
guides/snapshots/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/datafolio-api/: index.html
src/datafolio/: __init__.py  accessors.py  display.py  folio.py  metadata.py  readers.py  utils.py
src/datafolio/base/: __init__.py  handler.py  registry.py
src/datafolio/cache/: __init__.py  config.py  manager.py  metadata.py  validation.py
src/datafolio/cli/: __init__.py  main.py
src/datafolio/handlers/: __init__.py  arrays.py  artifacts.py  json_data.py  pytorch_models.py  sklearn_models.py  tables.py  timestamps.py
src/datafolio/storage/: __init__.py  backend.py  categories.py
tests/: test_base_handler.py  test_cache_integration.py  test_cache_manager.py  test_cache_validation.py  test_cli_snapshots.py  test_curation.py  test_data_accessor.py  test_data_generic.py  test_data_handling.py  test_export_snapshot.py  test_folio_basic.py  test_get_table_query_params.py  test_git_url_sanitization.py  test_handlers_polars.py  test_handlers_pytorch.py  test_handlers_sklearn.py  test_iter_table.py  test_lineage.py  test_metadata.py  test_models_artifacts.py  test_new_features.py  test_polars_integration.py  test_pytorch_cache.py  test_pytorch_models.py  test_query_table.py  test_read_only_snapshot.py  test_readers.py  test_refresh.py  test_snapshots_phase1.py  test_snapshots_phase2.py  test_snapshots_phase3.py  test_snapshots_phase4.py  test_snapshots_phase5.py  test_snapshots_phase6.py  test_storage_backend.py  test_storage_categories.py  test_table_utils.py  test_timestamps.py  test_utils.py
